# python-sdk

./: .fernignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  reference.md
docs/: index.md
reference/SUMMARY/: index.html
reference/gooey/: index.html
reference/gooey/client/: index.html
reference/gooey/copilot/: index.html
reference/gooey/core/: index.html
reference/gooey/environment/: index.html
reference/gooey/errors/: index.html
reference/gooey/types/: index.html
reference/gooey/version/: index.html
scripts/: gen_ref_pages.py
search/: search_index.json
src/gooey/: __init__.py  client.py  version.py
src/gooey/ai_animation_generator/: client.py
src/gooey/ai_art_qr_code/: client.py
src/gooey/ai_background_changer/: client.py
src/gooey/ai_generated_photo_from_email_profile_lookup/: client.py
src/gooey/ai_image_with_a_face/: client.py
src/gooey/bulk_runner/: client.py
src/gooey/chyron_plant_bot/: client.py
src/gooey/compare_ai_image_generators/: client.py
src/gooey/compare_ai_image_upscalers/: client.py
src/gooey/compare_ai_translations/: client.py
src/gooey/compare_ai_voice_generators/: client.py
src/gooey/copilot/: __init__.py  client.py
src/gooey/copilot_for_your_enterprise/: __init__.py  client.py
src/gooey/copilot_integrations/: __init__.py  client.py
src/gooey/core/: client_wrapper.py  http_client.py
src/gooey/create_a_perfect_seo_optimized_title_paragraph/: client.py
src/gooey/edit_an_image_with_ai_prompt/: client.py
src/gooey/embeddings/: client.py
src/gooey/errors/: __init__.py  bad_request_error.py  internal_server_error.py  payment_required_error.py
src/gooey/evaluator/: __init__.py  client.py
tests/utils/: test_http_client.py  test_query_encoding.py  test_serialization.py
(+613 files in other folders)
